--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://uuxia.top
+url: https://uuxia.cn
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -93,7 +93,7 @@ feed:
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
-deploy:
-  type: git
-  repo:
-    github: git@github.com:xxl6097/xxl6097.github.io.git,master
+#deploy:
+#  type: git
+#  repo:
+#    github: git@github.com:xxl6097/xxl6097.github.io.git,master
