--- a/_config.yml
+++ b/_config.yml
@@ -91,9 +91,9 @@ feed:
   limit: 20
   hub:
 
-# Deployment
+ Deployment
 ## Docs: https://hexo.io/docs/deployment.html
-#deploy:
-#  type: git
-#  repo:
-#    github: git@github.com:xxl6097/xxl6097.github.io.git,master
+deploy:
+  type: git
+  repo:
+    github: git@github.com:xxl6097/xxl6097.github.io.git,master
