--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 悠悠智能
+title: 悠悠博客
 subtitle: uuxia
 description: 在浮躁的世界安安静静地敲代码
 author: uuxia
