--- a/themes/raytaylorism/_config.yml
+++ b/themes/raytaylorism/_config.yml
@@ -55,10 +55,7 @@ excerpt_link: 阅读全文
 archive_yearly: true
 
 # 版权信息
-copyright: © 2018~2022 uuxia.cn, All rights reserved.
-record: 工业和信息化部备案管理系统网站 粤ICP备2022014941号-1
-beianurl: http://beian.miit.gov.cn
-
+copyright: © 2018~2021 uuxia.top, All rights reserved.
 
 # Disqus评论shortname，若为空则不启用
 disqus_shortname:
